:bug: bug: make sure align left aligns buttons to the left the same way right does

--- a/dev/scss/partials/modifiers.scss
+++ b/dev/scss/partials/modifiers.scss
@@ -13,6 +13,18 @@
     }
   }
 
+  &-left {
+    text-align: left;
+    align-items: flex-start;
+    margin-right: auto;
+
+    > *,
+    p {
+      justify-content: flex-start;
+      margin-right: auto;
+    }
+  }
+
   &-right {
     text-align: right;
     align-items: flex-end;
